--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           >
           <ul class="nav-list list">
             <li class="nav-item">
-              <a href="" class="nav-link link">Studio</a>
+              <a href="" class="nav-link link active-link">Studio</a>
             </li>
             <li class="nav-item">
               <a href="./portfolio.html" class="nav-link link">Portfolio</a>
