--- a/portfolio.html
+++ b/portfolio.html
@@ -82,12 +82,21 @@
           <ul class="work-list list">
             <li class="work-item">
               <a class="work-link" href="#">
-                <img
-                  src="./images/img1.jpg"
-                  alt="appinterface"
-                  width="360"
-                  height="300"
-                />
+                <div class="work-image">
+                  <img
+                    src="./images/img1.jpg"
+                    alt="appinterface"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Banking App Interface Concept</h2>
                   <p class="sub-tittle">App</p>
@@ -96,12 +105,21 @@
             </li>
             <li class="work-item">
               <a class="work-link" href="#">
-                <img
-                  src="./images/img2.jpg"
-                  alt="payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="work-image">
+                  <img
+                    src="./images/img2.jpg"
+                    alt="payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Cashless Payment</h2>
                   <p class="sub-tittle">Marketing</p>
@@ -110,12 +128,21 @@
             </li>
             <li class="work-item">
               <a class="work-link" href="#">
-                <img
-                  src="./images/img3.jpg"
-                  alt="app"
-                  width="360"
-                  height="300"
-                />
+                <div class="work-image">
+                  <img
+                    src="./images/img3.jpg"
+                    alt="app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Meditaion App</h2>
                   <p class="sub-tittle">App</p>
@@ -124,12 +151,21 @@
             </li>
             <li class="work-item">
               <a class="work-link" href="#">
-                <img
-                  src="./images/img4.jpg"
-                  alt="taxi"
-                  width="360"
-                  height="300"
-                />
+                <div class="work-image">
+                  <img
+                    src="./images/img4.jpg"
+                    alt="apptaxi"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Taxi Service</h2>
                   <p class="sub-tittle">Marketing</p>
@@ -138,12 +174,21 @@
             </li>
             <li class="work-item">
               <a class="work-link" href="#">
-                <img
-                  src="./images/img5.jpg"
-                  alt="screen"
-                  width="360"
-                  height="300"
-                />
+                <div class="work-image">
+                  <img
+                    src="./images/img5.jpg"
+                    alt="screen"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Screen Illustrations</h2>
                   <p class="sub-tittle">Design</p>
@@ -152,12 +197,21 @@
             </li>
             <li class="work-item">
               <a class="work-link" href="#">
-                <img
-                  src="./images/img6.jpg"
-                  alt="courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="work-image">
+                  <img
+                    src="./images/img6.jpg"
+                    alt="courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Online Courses</h2>
                   <p class="sub-tittle">Marketing</p>
@@ -166,7 +220,21 @@
             </li>
             <li class="work-item">
               <a class="work-link" href="#">
-                <img src="./images/img7.jpg" alt="instagram" />
+                <div class="work-image">
+                  <img
+                    src="./images/img7.jpg"
+                    alt="instagram"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Instagram Stories Concept</h2>
                   <p class="sub-tittle">Design</p>
@@ -175,7 +243,21 @@
             </li>
             <li class="work-item">
               <a class="work-link" href="#">
-                <img src="./images/img8.jpg" alt="food" />
+                <div class="work-image">
+                  <img
+                    src="./images/img8.jpg"
+                    alt="food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Organic Food</h2>
                   <p class="sub-tittle">Web Site</p>
@@ -184,12 +266,21 @@
             </li>
             <li class="work-item">
               <a class="work-link" href="#">
-                <img
-                  src="./images/img9.jpg"
-                  alt="coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="work-image">
+                  <img
+                    src="./images/img9.jpg"
+                    alt="coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="work-description">
+                    <p class="text-description">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="works-text">
                   <h2 class="card-tittle">Fresh Coffee</h2>
                   <p class="sub-tittle">Web Site</p>
