--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
       <section class="hero-section section">
         <div class="container">
           <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button link">Order Service</button>
+          <button type="button" class="hero-button link" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="section advantages">
@@ -393,6 +395,17 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="close-button" data-modal-close>
+          <svg class="close-icon">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
