--- a/index.html
+++ b/index.html
@@ -393,6 +393,20 @@
             </li>
           </ul>
         </div>
+
+          <form class="subscribe-form">
+            <h2 class="footer-tittle subscribe-tittle">Subscribe</h2>
+            <div class="subscribe-field">
+                <label for="email" class="subscribe-field"></label>
+                <input type="email" name="email" id="email" placeholder="E-mail" class="mail-input">
+                <button type="submit" class="button subscribe-button">Subscribe
+                  <svg class="subscribe-icon">
+                    <use href="./images/icons.svg#icon-telegram"></use>
+                  </svg>
+                </button>
+            </div>
+          </form>
+
       </div>
     </footer>
 
